# Banking-Application-project-

./: .gitignore  README.md
terminal/: build.sh  main.cpp  the_bank
terminal/headers/: bank.h
terminal/src/: bank.cpp  bank_account.cpp  bank_fields.cpp  function.cpp  user_data.cpp
visual_interface/: CMakeLists.txt  build.sh  makefile
visual_interface/headers/: bank.h  bank_account.h  function.h  mainwindow.h  user_data.h
visual_interface/headers/headers/: bank.h  bank_account.h  bank_fields.h  global_var.h
visual_interface/src/: bank.cpp  bank_account.cpp  bank_fields.cpp  function.cpp  main.cpp  mainwindow.cpp  user_data.cpp
